syntax = "proto3";

option go_package = "./service;service";

package service;

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

message IsLoginRequest {
  string token = 1;
}

message IsLoginResponse {
  int32 code = 1;
  string msg = 2;
}

message UserRequest{
  int64 user_id = 1;
  string token = 2;
}
message UserResponse{
  int32 status_code = 1;
  string status_msg = 2;
  UserMsg user = 3;
}
message UserMsg{
  int64 id = 1;
  string name = 2;
  int32 follow_count = 3;
  int32 follower_count = 4;
  bool is_follow = 5;
}
service UserProto{
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc IsLogin(IsLoginRequest)returns (IsLoginResponse){}
  rpc GetUserMsg(UserRequest)returns (UserResponse){}
}